Trying to fix some issues with the Flexbox on smaller screens

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -532,13 +532,11 @@ h3 {
 }
 
 .icons {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 20px;
 }
 
 .fb-card {
-  margin-left: auto;
-  margin-right: auto;
+  margin-left: 20px;
 }
 
 
